Soften the wording of a footnote a bit.

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -186,7 +186,7 @@
 \vs p015 14:5 \pc Your world is called Urantia, and it is number 606 in the planetary group, or system, of Satania. This system has at present 619 inhabited worlds, and more than 200 additional planets are evolving favourably toward becoming inhabited worlds at some future time.
 \vs p015 14:6 Satania has a headquarters world called Jerusem, and it is system number 24 in the constellation of Norlatiadek. Your constellation, Norlatiadek, consists of 100 local systems and has a headquarters world called Edentia. Norlatiadek is number 70 in the universe of Nebadon. The local universe of Nebadon consists of 100 constellations and has a capital known as Salvington. The universe of Nebadon is number 84 in the minor sector of Ensa.
 \vs p015 14:7 The minor sector of Ensa consists of 100 local universes and has a capital called Uminor the 3\ts{rd}. This minor sector is number 3 in the major sector of Splandon. Splandon consists of 100 minor sectors and has a headquarters world called Umajor the 5\ts{th}. It is the 5\ts{th} major sector of the superuniverse of Orvonton, the 7\ts{th} segment of the grand universe. Thus you can locate your planet in the scheme of the organization and administration of the universe of universes.
-\vs p015 14:8 The grand universe number of your world, Urantia, is 5,342,482,337,666\fnst{\textbf{5,342,482,337,666}, How are the 7 celestial coordinates of our planet just given (7, 5, 3, 84, 70, 24, 606) encoded in the registry number? Note that the digits $1$ and $9$ are absent from \bibemph{both} sets. It is likely that the \bibemph{decimal} status is included as well and, together with the planet's number 606 it is represented in the final digits 666, see the note on \bibref[58:1.1]{p058 1:1}.}. That is the registry number on Uversa and on Paradise, your number in the catalogue of the inhabited worlds. I know the physical\hyp{}sphere registry number, but it is of such an extraordinary size that it is of little practical significance to the mortal mind.
+\vs p015 14:8 The grand universe number of your world, Urantia, is 5,342,482,337,666\fnst{\textbf{5,342,482,337,666}, How are the 7 celestial coordinates of our planet just given (7, 5, 3, 84, 70, 24, 606) encoded in the registry number? It is possible that the \bibemph{decimal} status is included as well and, together with the planet's number 606, it is represented in the final digits 666, see the note on \bibref[58:1.1]{p058 1:1}.}. That is the registry number on Uversa and on Paradise, your number in the catalogue of the inhabited worlds. I know the physical\hyp{}sphere registry number, but it is of such an extraordinary size that it is of little practical significance to the mortal mind.
 \vs p015 14:9 \pc Your planet is a member of an enormous cosmos; you belong to a well\hyp{}nigh infinite family of worlds, but your sphere is just as precisely administered and just as lovingly fostered as if it were the only inhabited world in all existence.
 \vsetoff
 \vs p015 14:10 [Presented by a Universal Censor hailing from Uversa.]
