Print section title in bold and adjust some font sizes.

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -37,9 +37,7 @@
 %\tunemarkuptag{adamant}
 %\tunemarkuptag{swift}
 %\tunemarkuptag{charter}
-%\tunemarkuptag{bliss}
 %\tunemarkuptag{maiola}
-%\tunemarkuptag{newjournal}
 
 % comment out for NO page break BEFORE Part title
 %\tunemarkuptag{beforepartnewpage}
@@ -110,8 +108,8 @@
 \def\urantiaexplfont{GoudyOlSt BT}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{17}{20}\selectfont}
-\newcommand{\urantiamainfontsize}{17/20}
+\newcommand{\bibbookend}{\fontsize{16}{19.5}\selectfont}
+\newcommand{\urantiamainfontsize}{16/19.5}
 }
 
 \tunemarkup{minionpro}{%
@@ -166,8 +164,8 @@
 \def\urantiaexplfont{Old Standard}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{17}{21}\selectfont}
-\newcommand{\urantiamainfontsize}{17/21}
+\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{15/19}
 }
 
 \tunemarkup{gentium}{%
@@ -180,8 +178,8 @@
 \def\urantiaexplfont{Gentium Book Basic}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{16}{20}\selectfont}
-\newcommand{\urantiamainfontsize}{16/20}
+\newcommand{\bibbookend}{\fontsize{17}{21}\selectfont}
+\newcommand{\urantiamainfontsize}{17/21}
 }
 
 \tunemarkup{bookman}{%
@@ -236,8 +234,8 @@
 \def\urantiaexplfont{Cambria}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{15/19}
+\newcommand{\bibbookend}{\fontsize{16}{20}\selectfont}
+\newcommand{\urantiamainfontsize}{16/20}
 }
 
 \tunemarkup{agora}{%
@@ -250,8 +248,8 @@
 \def\urantiaexplfont{PF Agora Serif Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{14}{18}\selectfont}
-\newcommand{\urantiamainfontsize}{14/18}
+\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{15/19}
 }
 
 \tunemarkup{newton}{%
@@ -292,8 +290,8 @@
 \def\urantiaexplfont{21 Cent}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{14}{18}\selectfont}
-\newcommand{\urantiamainfontsize}{14/18}
+\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{15/19}
 }
 
 \tunemarkup{adamant}{%
@@ -338,20 +336,6 @@
 \newcommand{\urantiamainfontsize}{15/18}
 }
 
-\tunemarkup{bliss}{%
-\def\urantiamainfont{Bliss Pro}
-\def\urantiaparttitlefont{GoudyHandtooled BT}
-\def\urantiatitlefont{Bliss Pro}
-\def\urantiaheaderfont{Bliss Pro}
-\def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Bliss Pro}
-\def\urantiaexplfont{Bliss Pro}
-\def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
-\renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{16/19}
-}
-
 \tunemarkup{maiola}{%
 \def\urantiamainfont{MaiolaPro}
 \def\urantiaparttitlefont{GoudyHandtooled BT}
@@ -366,20 +350,6 @@
 \newcommand{\urantiamainfontsize}{18/20}
 }
 
-\tunemarkup{newjournal}{%
-\def\urantiamainfont{NewJournal}
-\def\urantiaparttitlefont{GoudyHandtooled BT}
-\def\urantiatitlefont{NewJournal}
-\def\urantiaheaderfont{NewJournal}
-\def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{NewJournal}
-\def\urantiaexplfont{NewJournal}
-\def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
-\renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{16/19}
-}
-
 % Google Nexus 7 (or any Android 7" colour device)
 \tunemarkup{pgnexus7}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,135.5625mm}]{geometry}}
 
@@ -390,7 +360,7 @@
 \tunemarkup{pghanlin}{\RequirePackage[dvips,headheight=19pt,headsep=2pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,120.0mm}]{geometry}}
 
 % Kobo Aura HD 7"
-\tunemarkup{pgkoboaurahd}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={102.0mm,136.0mm}]{geometry}}
+\tunemarkup{pgkoboaurahd}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.25in},hmargin={0.07in},twoside=true,papersize={102.0mm,136.0mm}]{geometry}}
 
 % A4 for printed PDF to fit in 2x740 pages
 \tunemarkup{pgafour}{\RequirePackage[dvips,headheight=20pt,headsep=7pt,vmargin={0.5in,0.5in},hmargin={0.5in,0.5in},twoside=true,a4paper]{geometry}}
@@ -507,9 +477,9 @@
     \stepcounter{secnum}%
     \par\raggedbottom\addtolength{\topskip}{0pt plus 20pt}\vspace*{1ex}%
     \ifx\secname\ackn
-       {\centering\headerackfont\parbox{\columnwidth}{\itshape\centering\uppercase{#1}}\\*[3pt]}%
+       {\centering\headerackfont\parbox{\columnwidth}{\itshape\centering\uppercase{\textbf{#1}}}\\*[3pt]}%
     \else
-       {\centering\headerfont\addfontfeature{WordSpace=2.4}\parbox{\columnwidth}{\centering\uppercase{#1}}\\*[3pt]}%
+       {\centering\headerfont\addfontfeature{WordSpace=2.4}\parbox{\columnwidth}{\centering\uppercase{\textbf{#1}}}\\*[3pt]}%
     \fi
 \def\bibnobreakspace{ }
     % XXX for section-level bookmarks uncomment the following line and comment the one after
