--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -27,10 +27,10 @@
 %\tunemarkuptag{oldstandard}
 %\tunemarkuptag{gentium}
 %\tunemarkuptag{bookman}
-\tunemarkuptag{arno}
+%\tunemarkuptag{arno}
 %\tunemarkuptag{century}
 %\tunemarkuptag{cambria}
-%\tunemarkuptag{agora}
+\tunemarkuptag{agora}
 %\tunemarkuptag{fedra}
 %\tunemarkuptag{cent}
 %\tunemarkuptag{adamant}
@@ -247,8 +247,9 @@
 \def\urantiaexplfont{PF Agora Serif Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{15/19}
+\newcommand{\authorfont}{\fontsize{10.5}{9}\bfseries\itshape}%
+\newcommand{\bibbookend}{\fontsize{13}{17}\selectfont}
+\newcommand{\urantiamainfontsize}{13/17}
 }
 
 \tunemarkup{fedra}{%
@@ -391,9 +392,9 @@
 }
 
 \tunemarkuptwo{pgkoboaurahd}{%
-  \newcommand{\authorfont}{\fontsize{13}{9}\bfseries\itshape}%
+  \providecommand{\authorfont}{\fontsize{13}{9}\bfseries\itshape}%
 }{%
-  \newcommand{\authorfont}{\fontsize{11}{9}\bfseries\itshape}%
+  \providecommand{\authorfont}{\fontsize{11}{9}\bfseries\itshape}%
 }
 
 \renewcommand{\author}[1]{\thispagestyle{empty}\begin{center}\authorfont\textcolor{ubdarkblue}{#1}\end{center}\fancyhead[CE]{\bibheadfont\MakeUppercase{#1}}}
