Use Arno Pro by default.

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -27,10 +27,10 @@
 %\tunemarkuptag{oldstandard}
 %\tunemarkuptag{gentium}
 %\tunemarkuptag{bookman}
-%\tunemarkuptag{arno}
+\tunemarkuptag{arno}
 %\tunemarkuptag{century}
 %\tunemarkuptag{cambria}
-\tunemarkuptag{agora}
+%\tunemarkuptag{agora}
 %\tunemarkuptag{fedra}
 %\tunemarkuptag{cent}
 %\tunemarkuptag{adamant}
