Spell maneuver properly, i.e. as manoeuvre.

--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -82,7 +82,7 @@
 \vs p029 4:30 Energy transmitters can function with regard to all forms of communicable perception; they can render a distant scene “visible” as well as a distant sound “audible.” They provide the emergency lines of communication in the local systems and on the individual planets. These services must be used by practically all creatures for purposes of communication outside of the regularly established circuits.
 \vs p029 4:31 These beings, together with the energy transformers, are indispensable to the maintenance of mortal existence on those worlds having an impoverished atmosphere, and they are an integral part of the technique of life on the nonbreathing planets.
 \vs p029 4:32 \ublistelem{5.}\bibnobreakspace \bibemph{Primary Associators.} These interesting and invaluable entities are masterly energy conservators and custodians. Somewhat as a plant stores solar light, so do these living organisms store energy during times of plus manifestations. They work on a gigantic scale, converting the energies of space into a physical state not known on Urantia. They are also able to carry forward these transformations to the point of producing some of the primitive units of material existence. These beings simply act by their presence. They are in no way exhausted or depleted by this function; they act like living catalytic agents.
-\vs p029 4:33 During seasons of minus manifestations they are empowered to release these accumulated energies. But your knowledge of energy and matter is not sufficiently advanced to make it possible to explain the technique of this phase of their work. They always labour in compliance with universal law, handling and manipulating atoms, electrons, and ultimatons much as you maneuver adjustable type to make the same alphabetical symbols tell vastly different stories.
+\vs p029 4:33 During seasons of minus manifestations they are empowered to release these accumulated energies. But your knowledge of energy and matter is not sufficiently advanced to make it possible to explain the technique of this phase of their work. They always labour in compliance with universal law, handling and manipulating atoms, electrons, and ultimatons much as you manoeuvre adjustable type to make the same alphabetical symbols tell vastly different stories.
 \vs p029 4:34 The associators are the first group of life to appear on an organizing material sphere, and they can function at physical temperatures which you would regard as utterly incompatible with the existence of living beings. They represent an order of life which is simply beyond the range of human imagination. Together with their co\hyp{}workers, the dissociators, they are the most slavish of all intelligent creatures.
 \vs p029 4:35 \ublistelem{6.}\bibnobreakspace \bibemph{Secondary Dissociators.} Compared with the primary associators, these beings of enormous antigravity endowment are the reverse workers. There is never any danger that the special or modified forms of physical energy on the local worlds or in the local systems will be exhausted, for these living organizations are endowed with the unique power of evolving limitless supplies of energy. They are chiefly concerned with the evolution of a form of energy which is hardly known on Urantia from a form of matter which is recognized still less. They are truly the alchemists of space and the wonder\hyp{}workers of time. But in all the wonders they work, they never transgress the mandates of Cosmic Supremacy.
 \vs p029 4:36 \ublistelem{7.}\bibnobreakspace \bibemph{The Frandalanks.} These beings are the joint creation of all three orders of energy\hyp{}control beings: the primary and secondary force organizers and the power directors. Frandalanks are the most numerous of all the Master Physical Controllers; the number functioning in Satania alone is beyond your numerical concept. They are stationed on all inhabited worlds and are always attached to the higher orders of physical controllers. They function interchangeably in the central and superuniverses and in the domains of outer space.
