--- a/tex/p051.tex
+++ b/tex/p051.tex
@@ -21,7 +21,7 @@
 \vs p051 3:1 On the inhabited worlds the Material Sons and Daughters construct their own garden homes, soon being assisted by their own children. Usually the site of the garden has been selected by the Planetary Prince, and his corporeal staff do much of the preliminary work of preparation with the help of many of the higher types of native races.
 \vs p051 3:2 These Gardens of Eden are so named in honour of Edentia, the constellation capital, and because they are patterned after the botanic grandeur of the headquarters world of the Most High Fathers. Such garden homes are usually located in a secluded section and in a near\hyp{}tropic zone. They are wonderful creations on an average world. You can judge nothing of these beautiful centres of culture by the fragmentary account of the aborted development of such an undertaking on Urantia.
 \vs p051 3:3 \pc A Planetary Adam and Eve are, in potential, the full gift of physical grace to the mortal races. The chief business of such an imported pair is to multiply and to uplift the children of time. But there is no immediate interbreeding between the people of the garden and those of the world; for many generations Adam and Eve remain biologically segregated from the evolutionary mortals while they build up a strong race of their order. This is the origin of the violet race on the inhabited worlds.
-\vs p051 3:4 The plans for race upstepping are prepared by the Planetary Prince and his staff and are executed by Adam and Eve. And this was where your Material Son and his companion were placed at great disadvantage when they arrived on Urantia. Caligastia offered crafty and effective opposition to the Adamic mission; and notwithstanding that the Melchizedek receivers of Urantia had duly warned both Adam and Eve concerning the planetary dangers inherent in the presence of the rebellious Planetary Prince, this archrebel, by a wily stratagem, outmaneuvered the Edenic pair and entrapped them into a violation of the covenant of their trusteeship as the visible rulers of your world. The traitorous Planetary Prince did succeed in compromising your Adam and Eve, but he failed in his effort to involve them in the Lucifer rebellion.
+\vs p051 3:4 The plans for race upstepping are prepared by the Planetary Prince and his staff and are executed by Adam and Eve. And this was where your Material Son and his companion were placed at great disadvantage when they arrived on Urantia. Caligastia offered crafty and effective opposition to the Adamic mission; and notwithstanding that the Melchizedek receivers of Urantia had duly warned both Adam and Eve concerning the planetary dangers inherent in the presence of the rebellious Planetary Prince, this archrebel, by a wily stratagem, outmanoeuvred the Edenic pair and entrapped them into a violation of the covenant of their trusteeship as the visible rulers of your world. The traitorous Planetary Prince did succeed in compromising your Adam and Eve, but he failed in his effort to involve them in the Lucifer rebellion.
 \vs p051 3:5 \pc The fifth order of angels, the planetary helpers, are attached to the Adamic mission, always accompanying the Planetary Adams on their world adventures. The corps of initial assignment is usually about 100,000. When the work of the Urantia Adam and Eve was prematurely launched, when they departed from the ordained plan, it was one of the seraphic Voices of the Garden who remonstrated with them concerning their reprehensible conduct. And your narrative of this occurrence well illustrates the manner in which your planetary traditions have tended to ascribe everything supernatural to the Lord God. Because of this, Urantians have often become confused concerning the nature of the Universal Father since the words and acts of all his associates and subordinates have been so generally attributed to him. In the case of Adam and Eve, the angel of the Garden was none other than the chief of the planetary helpers then on duty. This seraphim, Solonia, proclaimed the miscarriage of the divine plan and requisitioned the return of the Melchizedek receivers to Urantia.
 \vs p051 3:6 \pc The secondary midway creatures are indigenous to the Adamic missions. As with the corporeal staff of the Planetary Prince, the descendants of the Material Sons and Daughters are of two orders: their physical children and the secondary order of midway creatures. These material but ordinarily invisible planetary ministers contribute much to the advancement of civilization and even to the subjection of insubordinate minorities who may seek to subvert social development and spiritual progress.
 \vs p051 3:7 The secondary midwayers should not be confused with the primary order, who date from the near times of the arrival of the Planetary Prince. On Urantia a majority of these earlier midway creatures went into rebellion with Caligastia and have, since Pentecost, been interned. Many of the Adamic group who did not remain loyal to the planetary administration are likewise interned.
