--- a/tex/p065.tex
+++ b/tex/p065.tex
@@ -14,7 +14,7 @@
 \vs p065 1:4 \ublistelem{2.}\bibnobreakspace The usual mid\hyp{}phase of quasi\hyp{}morontial existence.
 \vs p065 1:5 \ublistelem{3.}\bibnobreakspace The advanced semispiritual level.
 \vs p065 1:6 \pc When the Life Carriers make ready to engage in life implantation, and after they have selected the sites for such an undertaking, they summon the archangel commission of Life Carrier transmutation. This group consists of ten orders of diverse personalities, including the physical controllers and their associates, and is presided over by the chief of archangels, who acts in this capacity by the mandate of Gabriel and with the permission of the Ancients of Days. When these beings are properly encircuited, they can effect such modifications in the Life Carriers as will enable them immediately to function on the physical levels of electrochemistry.
-\vs p065 1:7 After the life patterns have been formulated and the material organizations have been duly completed, the supermaterial forces concerned in life propagation become forthwith active, and life is existent. Whereupon the Life Carriers are immediately returned to their normal mid\hyp{}phase of personality existence, in which estate they can manipulate the living units and maneuver the evolving organisms, even though they are shorn of all ability to organize --- create --- new patterns of living matter.
+\vs p065 1:7 After the life patterns have been formulated and the material organizations have been duly completed, the supermaterial forces concerned in life propagation become forthwith active, and life is existent. Whereupon the Life Carriers are immediately returned to their normal mid\hyp{}phase of personality existence, in which estate they can manipulate the living units and manoeuvre the evolving organisms, even though they are shorn of all ability to organize --- create --- new patterns of living matter.
 \vs p065 1:8 After organic evolution has run a certain course and free will of the human type has appeared in the highest evolving organisms, the Life Carriers must either leave the planet or take renunciation vows; that is, they must pledge themselves to refrain from all attempts further to influence the course of organic evolution. And when such vows are voluntarily taken by those Life Carriers who choose to remain on the planet as future advisers to those who shall be entrusted with the fostering of the newly evolved will creatures, there is summoned a commission of 12, presided over by the chief of the Evening Stars, acting by authority of the System Sovereign and with permission of Gabriel; and forthwith these Life Carriers are transmuted to the third phase of personality existence --- the semispiritual level of being. And I have functioned on Urantia in this third phase of existence ever since the times of Andon and Fonta.
 \vs p065 1:9 We look forward to a time when the universe may be settled in light and life, to a possible fourth stage of being wherein we shall be wholly spiritual, but it has never been revealed to us by what technique we may attain this desirable and advanced estate.
 \usection{2.\bibnobreakspace The Evolutionary Panorama}
