--- a/tex/p177.tex
+++ b/tex/p177.tex
@@ -13,7 +13,7 @@
 \vs p177 1:6 Throughout the few remaining hours of Jesus’ earth life John Mark never permitted the Master for long to get out of his sight. Always was the lad in hiding near by; he slept only when Jesus slept.
 \usection{2.\bibnobreakspace Early Home Life}
 \vs p177 2:1 In the course of this day’s visiting with John Mark, Jesus spent considerable time comparing their early childhood and later boyhood experiences. Although John’s parents possessed more of this world’s goods than had Jesus’ parents, there was much experience in their boyhood which was very similar. Jesus said many things which helped John better to understand his parents and other members of his family. When the lad asked the Master how he could know that he would turn out to be a “mighty messenger of the kingdom,” Jesus said:
-\vs p177 2:2 \textcolour{ubdarkred}{“I know you will prove loyal to the gospel of the kingdom because I can depend upon your present faith and love when these qualities are grounded upon such an early training as has been your portion at home. You are the product of a home where the parents bear each other a sincere affection, and therefore you have not been overloved so as injuriously to exalt your concept of self\hyp{}importance. Neither has your personality suffered distortion in consequence of your parents’ loveless maneuvering for your confidence and loyalty, the one against the other. You have enjoyed that parental love which ensures laudable self\hyp{}confidence and which fosters normal feelings of security. But you have also been fortunate in that your parents possessed wisdom as well as love; and it was wisdom which led them to withhold most forms of indulgence and many luxuries which wealth can buy while they sent you to the synagogue school along with your neighbourhood playfellows, and they also encouraged you to learn how to live in this world by permitting you to have original experience. You came over to the Jordan, where we preached and John’s disciples baptized, with your young friend Amos. Both of you desired to go with us. When you returned to Jerusalem, your parents consented; Amos’s parents refused; they loved their son so much that they denied him the blessed experience which you have had, even such as you this day enjoy. By running away from home, Amos could have joined us, but in so doing he would have wounded love and sacrificed loyalty. Even if such a course had been wise, it would have been a terrible price to pay for experience, independence, and liberty. Wise parents, such as yours, see to it that their children do not have to wound love or stifle loyalty in order to develop independence and enjoy invigorating liberty when they have grown up to your age.}
+\vs p177 2:2 \textcolour{ubdarkred}{“I know you will prove loyal to the gospel of the kingdom because I can depend upon your present faith and love when these qualities are grounded upon such an early training as has been your portion at home. You are the product of a home where the parents bear each other a sincere affection, and therefore you have not been overloved so as injuriously to exalt your concept of self\hyp{}importance. Neither has your personality suffered distortion in consequence of your parents’ loveless manoeuvring for your confidence and loyalty, the one against the other. You have enjoyed that parental love which ensures laudable self\hyp{}confidence and which fosters normal feelings of security. But you have also been fortunate in that your parents possessed wisdom as well as love; and it was wisdom which led them to withhold most forms of indulgence and many luxuries which wealth can buy while they sent you to the synagogue school along with your neighbourhood playfellows, and they also encouraged you to learn how to live in this world by permitting you to have original experience. You came over to the Jordan, where we preached and John’s disciples baptized, with your young friend Amos. Both of you desired to go with us. When you returned to Jerusalem, your parents consented; Amos’s parents refused; they loved their son so much that they denied him the blessed experience which you have had, even such as you this day enjoy. By running away from home, Amos could have joined us, but in so doing he would have wounded love and sacrificed loyalty. Even if such a course had been wise, it would have been a terrible price to pay for experience, independence, and liberty. Wise parents, such as yours, see to it that their children do not have to wound love or stifle loyalty in order to develop independence and enjoy invigorating liberty when they have grown up to your age.}
 \vs p177 2:3 \textcolour{ubdarkred}{“Love, John, is the supreme reality of the universe when bestowed by all\hyp{}wise beings, but it is a dangerous and oftentimes semiselfish trait as it is manifested in the experience of mortal parents. When you get married and have children of your own to rear, make sure that your love is admonished by wisdom and guided by intelligence.}
 \vs p177 2:4 \textcolour{ubdarkred}{“Your young friend Amos believes this gospel of the kingdom just as much as you, but I cannot fully depend upon him; I am not certain about what he will do in the years to come. His early home life was not such as would produce a wholly dependable person. Amos is too much like one of the apostles who failed to enjoy a normal, loving, and wise home training. Your whole afterlife will be more happy and dependable because you spent your first eight years in a normal and well\hyp{}regulated home. You possess a strong and well\hyp{}knit character because you grew up in a home where love prevailed and wisdom reigned. Such a childhood training produces a type of loyalty which assures me that you will go through with the course you have begun.”}
 \vs p177 2:5 For more than an hour Jesus and John continued this discussion of home life. The Master went on to explain to John how a child is wholly dependent on his parents and the associated home life for all his early concepts of everything intellectual, social, moral, and even spiritual since the family represents to the young child all that he can first know of either human or divine relationships. The child must derive his first impressions of the universe from the mother’s care; he is wholly dependent on the earthly father for his first ideas of the heavenly Father. The child’s subsequent life is made happy or unhappy, easy or difficult, in accordance with his early mental and emotional life, conditioned by these social and spiritual relationships of the home. A human being’s entire afterlife is enormously influenced by what happens during the first few years of existence.
