--- a/tex/p010.tex
+++ b/tex/p010.tex
@@ -80,7 +80,7 @@
 \vs p010 7:2 \pc As things appear to the mortal on the finite level, the Paradise Trinity, like the Supreme Being, is concerned only with the total --- total planet, total universe, total superuniverse, total grand universe. This totality attitude exists because the Trinity is the total of Deity and for many other reasons.
 \vs p010 7:3 The Supreme Being is something less and something other than the Trinity functioning in the finite universes; but within certain limits and during the present era of incomplete power\hyp{}personalization, this evolutionary Deity does appear to reflect the attitude of the Trinity of Supremacy. The Father, Son, and Spirit do not personally function with the Supreme Being, but during the present universe age they collaborate with him as the Trinity. We understand that they sustain a similar relationship to the Ultimate. We often conjecture as to what will be the personal relationship between the Paradise Deities and God the Supreme when he has finally evolved, but we do not really know.
 \vs p010 7:4 \pc We do not find the overcontrol of Supremacy to be wholly predictable. Furthermore, this unpredictability appears to be characterized by a certain developmental incompleteness, undoubtedly an earmark of the incompleteness of the Supreme and of the incompleteness of finite reaction to the Paradise Trinity.
-\vs p010 7:5 The mortal mind can immediately think of a thousand and one things --- catastrophic physical events, appalling accidents, horrific disasters, painful illnesses, and world\hyp{}wide scourges --- and ask whether such visitations are correlated in the unknown maneuvering of this probable functioning of the Supreme Being. Frankly, we do not know; we are not really sure. But we do observe that, as time passes, all these difficult and more or less mysterious situations \bibemph{always} work out for the welfare and progress of the universes. It may be that the circumstances of existence and the inexplicable vicissitudes of living are all interwoven into a meaningful pattern of high value by the function of the Supreme and the overcontrol of the Trinity.
+\vs p010 7:5 The mortal mind can immediately think of a thousand and one things --- catastrophic physical events, appalling accidents, horrific disasters, painful illnesses, and world\hyp{}wide scourges --- and ask whether such visitations are correlated in the unknown manoeuvring of this probable functioning of the Supreme Being. Frankly, we do not know; we are not really sure. But we do observe that, as time passes, all these difficult and more or less mysterious situations \bibemph{always} work out for the welfare and progress of the universes. It may be that the circumstances of existence and the inexplicable vicissitudes of living are all interwoven into a meaningful pattern of high value by the function of the Supreme and the overcontrol of the Trinity.
 \vs p010 7:6 As a son of God you can discern the personal attitude of love in all the acts of God the Father. But you will not always be able to understand how many of the universe acts of the Paradise Trinity redound to the good of the individual mortal on the evolutionary worlds of space. In the progress of eternity the acts of the Trinity will be revealed as altogether meaningful and considerate, but they do not always so appear to the creatures of time.
 \usection{8.\bibnobreakspace The Trinity Beyond the Finite}
 \vs p010 8:1 Many truths and facts pertaining to the Paradise Trinity can only be even partially comprehended by recognizing a function that transcends the finite.
